--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,8 @@
 	path = OCA/edi
 	url = git@github.com:OCA/edi.git
 	branch = 14.0
+
+[submodule "OCA/server-tools"]
+	path = OCA/server-tools
+	url = git@github.com:OCA/server-tools.git
+	branch = 14.0
