[ADD] submodule OCA/community-data-files

--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = OCA/server-tools
 	url = git@github.com:OCA/server-tools.git
 	branch = 14.0
+
+[submodule "OCA/community-data-files"]
+	path = OCA/community-data-files
+	url = git@github.com:OCA/community-data-files.git
+	branch = 14.0
